name:                scroller
version:             0.1.0.0
author:              Ryota Kameoka
maintainer:          kameoka.ryota@gmail.com
copyright:           MIT
build-type:          Simple
cabal-version:       >=1.10

executable scroller
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , transformers
                     , vty
  default-language:    Haskell2010
  ghc-options:       -threaded
